Don't crash when deleting templates

BUG: 413506